<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_edit_listing"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="itp341.wang.cherrie.parkhere.CreateEditListingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/listingImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_parking_spot"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/fillButton"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:text="Fill Listing Info" />

                <TextView
                    android:id="@+id/parkingSpotTextView"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="No Parking Spot Selected"
                    android:textSize="16sp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/listingTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:hint="@string/listing_title_hint_string"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/handicappedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/handicapped_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/tandemCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/tandem_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/suvCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/suv_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/coveredCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/covered_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="Long Term"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/dateButton"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:text="Select Date"/>

                <TextView
                    android:id="@+id/fromDateTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="11/03/2016"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/toDateTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="11/03/2016"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="Short Term"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/mondayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Monday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/tuesdayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Tuesday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/wednesdayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Wednesday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/thursdayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Thursday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/fridayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Friday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/saturdayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Saturday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/sundayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Sunday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/timeButton"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:text="Select Time"/>

                <TextView
                    android:id="@+id/fromTimeTextView"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="11:59 PM"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/toTimeTextView"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="11:59 PM"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="Location"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/aboutEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:hint="@string/about_hint_string"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

             <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">
                 <TextView
                     android:id="@+id/cancellationTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="16dp"
                     android:textSize="18sp"
                     android:text="Select Cancellation Policy"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="12dp"/>
                 <Spinner
                     android:id="@+id/spinnerCancellation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:textSize="18sp"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="12dp"
                     android:entries = "@array/policies"></Spinner>
            </LinearLayout>

            <TextView
                android:id="@+id/cancelDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textSize="14sp"
                android:text="Cancellation Policy Details"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <com.blackcat.currencyedittext.CurrencyEditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                />

            <Button
                android:id="@+id/createListingButton"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingEnd="50dp"
                android:paddingStart="50dp"
                android:text="@string/create_button_string"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
