<resources>
    <string name="app_name">ParkHere</string>
    <!-- SignUp and Login Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="phone_num">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first">First Name:</string>
...
    <string name="availibility_string">Availibility</string>
    <string name="review_string_example">This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. </string>

    <!--CreateEditListing strings-->
    <string name="listing_title_hint_string">Listing Name</string>
    <string name="handicapped_string">Handicapped</string>
    <string name="tandem_string">Tandem</string>
    <string name="suv_string">SUV</string>
    <string name="covered_string">Covered</string>
    <string name="location_hint_string">Location</string>
    <string name="about_hint_string">About</string>
    <string name="create_button_string">Create</string>
    <string name="cancel_string_moderate">For a full refund of associated fees, cancellation must be made a full 5 days prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 5 days before the start time, the costs are non-refundable.</string>
    <string name="cancel_string_flexible">For a full refund of associated fees, cancellation must be made a full 24 hours prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 24 hours before the start time, the costs are non-refundable.</string>
    <string name="cancel_string_strict">For a full refund of associated fees, cancellation must be made a full 7 days prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 7 days before the start time, the costs are non-refundable.</string>

    <!--RateReview strings-->
    <string name="review_hint_string">Please leave a review about your parking experience. Please note that your review will be moderated and published publicly for other users to see.</string>
...
